[test]

[install]

[versioneer]
VCS                = git
style              = git-describe
tag_prefix         = v
versionfile_source = src/pds/aipgen/_version.py
versionfile_build  = pds/aipgen/_version.py
parentdir_prefix   = pds.deeparchive-


# For future consideration:
#
# - Move declarative metadata out of `setup.py` and into here
# - Add `[options]` for zip-safe use, package metadata
# - Use namespace packages

